# backup-restore

./: .ci.env  .gitignore  .pdm-python  Dockerfile  Dockerfile_web  README.md  pyproject.toml  quick-start.ps1  quick-start.sh  security-compare-auth.md
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 009_backup_automation_tables.py  010_make_backup_runs_schedule_id_nullable.py  011_create_audit_events_table.py  012_add_user_fields_to_audit_events.py
app/: main.py  runner.py
app/api/: keycloak_auth.py  logging_config.py  security.py  settings.py
build-image/: README.md  build-image.sh  docker-compose.build.yml
ci-cd/: README.md  SECRETS_GUIDE.md  docker-compose.cicd-setup.yml
docker/nginx/: default.conf.template  generate-keycloak-config.sh
docs/: DATABASE_BACKUP.md  DEPENDENCY_MANAGEMENT.md  PRODUCTION-IMAGE-BUILD.md  PROJECT_STRUCTURE.md  QUICK_START.md  WINDOWS.md
local-deployment/: .env.test-databases  README.test-databases.md  docker-compose-python-dependency-management.yml  docker-compose.keycloak.yml  docker-compose.neo4j.yml  docker-compose.postgres.yml  docker-compose.runner.yml  docker-compose.test-databases-macos.yml  docker-compose.test-databases.mac.yml  docker-compose.test-databases.yml  docker-compose.yml
python-dependency-management/: Dockerfile  README.md  dev-setup.sh
scripts/: Dockerfile  keycloak_bootstrap.py
setup/: .env.template  docker-compose.setup.yml  setup.sh
testing/: README-BUILD-SCRIPTS.md  README.md  quick-test.ps1  quick-test.sh  rebuild-and-push.ps1  rebuild-and-push.sh  test-backup-restore.ps1  test-backup-restore.sh  test-crud-example-nodes.ps1  test-crud-example.ps1
website/: README.md  app.js  index.html  keycloak-config.js  keycloak.js  multi-select.js  styles.css
(+93 files in other folders)
